// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formatter > withPrettierConfig > prettier-v2 > formats content with prettier 1`] = `
"import type { Meta, StoryObj } from '@storybook/nextjs';

import Component from './foo';

const meta = {
    component: Component,
} satisfies Meta<typeof Component>;

export default meta;

type Story = StoryObj<typeof meta>;
"
`;

exports[`formatter > withPrettierConfig > prettier-v3 > formats content with prettier 1`] = `
"import type { Meta, StoryObj } from '@storybook/nextjs';

import Component from './foo';

const meta = {
    component: Component,
} satisfies Meta<typeof Component>;

export default meta;

type Story = StoryObj<typeof meta>;
"
`;

exports[`formatter > withoutPrettierConfigAndWithEditorConfig > prettier not available > should return the content formatted by settings of editorconfig 1`] = `
"import type { Meta, StoryObj } from "@storybook/nextjs";

import Component from "./foo";

const meta = {
      component: Component,
} satisfies Meta<typeof Component>;

export default meta;

type Story = StoryObj<typeof meta>;
"
`;

exports[`formatter > withoutPrettierConfigAndWithEditorConfig > prettier-v2 > formats content with prettier 1`] = `
"import type { Meta, StoryObj } from "@storybook/nextjs";

import Component from "./foo";

const meta = {
      component: Component,
} satisfies Meta<typeof Component>;

export default meta;

type Story = StoryObj<typeof meta>;
"
`;

exports[`formatter > withoutPrettierConfigAndWithEditorConfig > prettier-v3 > formats content with prettier 1`] = `
"import type { Meta, StoryObj } from "@storybook/nextjs";

import Component from "./foo";

const meta = {
      component: Component,
} satisfies Meta<typeof Component>;

export default meta;

type Story = StoryObj<typeof meta>;
"
`;
